--- a/Style.css
+++ b/Style.css
@@ -33,7 +33,7 @@ nav{
     right: 0;
     padding: 10px 5%;
     position: fixed;
-    background-color:#2c848abe;
+    /*background-color:#0b5055f8;*/
     width: 100%;
     cursor: pointer;
     z-index: 99;
